--- a/Menu.html
+++ b/Menu.html
@@ -40,7 +40,7 @@ background-repeat: no-repeat;
 <th> CHOCOLATE CAKE </th>
 </tr>
 <tr>
-<td> <a href="chocolate milkshake.html"> <img src="chocolate milkshake.jpg" alt="Chocolate milkshake" height="220" width="200" hspace="90" vspace="10"></img></a> </td><br>
+<td> <a href="Chocolate milkshake.html"> <img src="chocolate milkshake.jpg" alt="Chocolate milkshake" height="220" width="200" hspace="90" vspace="10"></img></a> </td><br>
 <td> <a href="Chocolate mousse.html"> <img src="chocolate-mousse-3.jpg" alt="Chocolate Mousse" height="220" width="200" hspace="90" vspace="10"></img></a> </td>
 <td> <a href="Chocolate cake.html"> <img src="chocolate espresso layer cake.jfif" alt="Chocolate espresso layer cake" height="220" width="200" hspace="90" vspace="10"></img></a> </td>
 </tr>
